Improvements to OAS security

--- a/openapi/security/security-schemes/security-http.mdx
+++ b/openapi/security/security-schemes/security-http.mdx
@@ -127,11 +127,11 @@ Since all APIs need to be accurately described (warts and all), here's how to de
     { key: "field", header: "Field" },
     { key: "type", header: "Type" },
     { key: "required", header: "Required" },
-    { key: "description", header: "Description" },
+    { key: "description", header: "Description" }
   ]}
 />
 
-For example:
+For example: 
 
 ```yaml
 components:
