--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -7,7 +7,7 @@ import { Callout } from "@/mdx/components";
 
 Because MCP servers enable communication with APIs, they open the groundwork for many possible integrations, such as users being able to order food or products via Claude Desktop or developers being able to understand your API using Cursor AI.
 
-But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas making your backend instantly agent-ready.
+But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
 
 In this article, we will learn how to build an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API with [FastMCP](https://gofastmcp.com/getting-started/welcome) and [Speakeasy](https://www.speakeasy.com/). We will then compare the tools on characteristics such as maintenance, code quality, and usage.
 
@@ -20,7 +20,7 @@ git clone https://github.com/speakeasy-api/examples
 cd examples/fastmcp-speakeasy-project/base
 ```
 
-To make the setup easier, we are working with the environment manager `uv`. You can use any Python environment creation tool which you are familiar with.
+To make the setup easier, we are working with the `uv` environment manager. You can use any Python environment creation tool that you are familiar with.
 
 ```bash
 uv venv
@@ -39,17 +39,17 @@ Then run the API using the following command:
 uvicorn app.main:server --reload
 ```
 
-We also recommend having [Claude Desktop](https://claude.ai/download) installed on your machine for testing the MCP servers. We can now start integrating FastMCP and Speakeasy in the project to build an MCP server. Let's begin by integrating FastMCP.
+We also recommend having [Claude](https://claude.ai/download) installed on your machine for testing the MCP servers. We can now start integrating FastMCP and Speakeasy in the project to build an MCP server. Let's begin by integrating FastMCP.
 
 ## Building an MCP server with FastAPI and FastMCP
 
 FastMCP is a Python package that provides a high-level implementation of the MCP Python SDK. By using this package, you can quickly build an MCP server without worrying about the low-level implementation of component lifecycle management, including tools, resources, or prompts.
 
-Interestingly, the FastMCP package provides an [integration with FastAPI](https://gofastmcp.com/servers/openapi#fastapi-integration), to have your controllers transformed into MCP tools. Let's see how to implement it.
+Interestingly, the FastMCP package provides an [integration with FastAPI](https://gofastmcp.com/servers/openapi#fastapi-integration) that transforms your controllers into MCP tools. Let's see how to implement it.
 
 ### 1. Installing FastMCP
 
-First, we need to install the [fastmcp](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation) package in the project.
+First, we need to install the [FastMCP](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation) package in the project.
 
 ```bash
 uv pip install fastmcp
@@ -116,7 +116,7 @@ You can find the configuration file by going to Settings -> Developer -> Edit co
 }
 ```
 
-The `--with` option enables us to specify the dependencies to use when running the file. But, `fastmcp` is not the only one dependency because we are also working with `fastapi`. Additionally, you may encounter issues with the Python path, which can result in import errors. Let's modify the configuration to ensure Claude can run the project without issues.
+The `--with` option enables us to specify the dependencies to use when running the file. But `fastmcp` is not the only dependency because we are also working with `fastapi`. Additionally, you may encounter issues with the Python path, which can result in import errors. Let's modify the configuration to ensure Claude can run the project without issues.
 
 ```json
 {
@@ -141,13 +141,13 @@ The `--with` option enables us to specify the dependencies to use when running t
 }
 ```
 
-We have added the `fastapi[all]` dependency and an environment variable to set the Python path, ensuring imports work.
+We have added the `fastapi[all]` dependency and an environment variable to set the Python path, ensuring that the imports work.
 
-We have completed the integration of FastAPI and FastMCP. Let's test the MCP server in Claude Desktop.
+The integration of FastAPI and FastMCP is now complete. Let's test the MCP server in the Claude desktop app.
 
 ### Testing the integration
 
-Open your Claude Desktop application and click on the `Search and tools` button.
+Open your Claude desktop application and click on the `Search and tools` button.
 
 ![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)
 
@@ -159,11 +159,11 @@ Clicking on the server, you will see the tools we added.
 
 ![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)
 
-You can then ask Claude to create a burger in the chat
+You can then ask Claude to create a burger in the chat.
 
 ![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)
 
-We can see that Claude was able to make a tool call to create Burger from our API.
+We can see that Claude was able to make a tool call to create a burger from our API.
 
 We have now created an MCP server with FastAPI and FastMCP.
 
@@ -196,13 +196,13 @@ Without that visibility, debugging tool behavior can be difficult when something
 
 ## Building an MCP server with FastAPI and Speakeasy
 
-[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate SDKs from OpenAPI documents in many languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
+[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate software development kits (SDKs) from OpenAPI documents in many languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
 
 Let's see how to build an MCP server with FastAPI and Speakeasy.
 
 ### 1. Installing the Speakeasy CLI
 
-You will need to install [Speakeasy](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your machine first.
+You will first need to install [Speakeasy](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your device. If you are using a Mac or Linux, use the following commands:
 
 ```bash
 # Homebrew (macOS)
@@ -212,7 +212,7 @@ brew install speakeasy-api/homebrew-tap/speakeasy
 curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
 ```
 
-If you are using a Windows machine, you can use those commands.
+If you are using a Windows device, use the following commands:
 
 ```bash
 # Windows Installation
@@ -225,10 +225,10 @@ choco install speakeasy
 
 ### 2. Uploading the OpenAPI document
 
-Our project already has OpenAPI document files, such as `openapi.yaml` and `openapi.json`. Therefore, we won't need to perform any configuration on that side.
+Our project already has OpenAPI document files like `openapi.yaml` and `openapi.json`, so we won't need to perform any configuration for those.
 
 <Callout title="Note" type="info">
- For your FastAPI project, you will need to generate those files. We have a tutorial which you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](/openapi/frameworks/fastapi#basic-fastapi-setup).
+ For your FastAPI project, you will need to generate these files. We have a tutorial that you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](/openapi/frameworks/fastapi#basic-fastapi-setup).
 </Callout>
 
 To initiate the process, run the following command from the project's root directory.
@@ -237,7 +237,7 @@ To initiate the process, run the following command from the project's root direc
 speakeasy quickstart
 ```
 
-This command will first prompt for authentication, and then after the successful authentication, you will enter the path to the OpenAPI document which is `./openapi.yaml`.
+This command will first prompt for authentication, and then after the successful authentication, you will enter the following path to the OpenAPI document: `./openapi.yaml`.
 
 ![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)
 
@@ -249,11 +249,11 @@ The next step is to give the SDK a name. Let's name the SDK `mcp-burger-sdk`.
 
 ### 4. Selecting the output
 
-Speakeasy will ask you what you want to generate. Choose the Model Context Protocol (MCP) Server, and the sub-option will be TypeScript SDK with Server.
+Speakeasy will ask you what you want to generate. Choose the Model Context Protocol (MCP) Server, and then the sub-option: TypeScript SDK with Server.
 
 ![Choosing the SDK type](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-type.png)
 
-The Speakeasy CLI will then ask you for a directory to generate the SDK and a name for the NPM package. You can simply press **Enter** to use the current directory and the default package name, or modify them if needed.
+The Speakeasy command-line interface (CLI) will then ask you for a directory to generate the SDK and a name for the npm package. You can simply press **Enter** to use the current directory and the default package name, or modify them if needed.
 
 At this stage, Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`. A built version is also available at `mcp-burger-sdk-typescript/bin/mcp-server.js`, which is the file you'll reference in your Claude Desktop configuration.
 
@@ -276,7 +276,7 @@ With the MCP server already built, the next step is to configure the MCP server 
 ```
 
 <Callout title="Note" type="info">
- Speakeasy also allows you to install your MCP server after it has been published to the npm registry. In that case, you would use a similar configuration in the `claude-desktop-config.json` file.
+ Speakeasy also allows you to install your MCP server after it has been published to the npm registry. In this case, you would use a similar configuration in the `claude-desktop-config.json` file.
 
 ```json
 {
@@ -299,7 +299,7 @@ With the MCP server already built, the next step is to configure the MCP server 
 ```
 </Callout>
 
-Once the installation is complete, reload Claude Desktop and you should see the server and its tools available.
+Once the installation is complete, reload the Claude desktop app. You should see the server and its available tools.
 
 ![Viewing the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-typescript-sdk.png)
 
@@ -307,7 +307,7 @@ You now have a working MCP server generated with Speakeasy.
 
 ### More configuration with Speakeasy
 
-Speakeasy allows you to [customize](https://www.speakeasy.com/docs/model-context-protocol#configuration-options) your server, whether it's about hiding certain tools and setting specific scopes, but the customization starts with the OpenAPI document. To disable the generation of a tool for an operation, use the `x-speakeasy-mcp` extension.
+Speakeasy allows you to [customize](https://www.speakeasy.com/docs/model-context-protocol#configuration-options) your server, whether you'd like to hide certain tools and set specific scopes, but the customization starts with the OpenAPI document. To disable the generation of a tool for an operation, use the `x-speakeasy-mcp` extension.
 
 ```yaml
 paths:
@@ -329,8 +329,8 @@ paths:
 In the code configuration above:
 
 - `disabled` specifies when a tool should be ignored.
-- `name` is used to set the name of the MCP tool, if you are looking to change it.
-- `scopes` are a way of tagging tools, which is helpful when you want to run the MCP server for a specific set of tools only.
+- `name` is used to set the name of the MCP tool if you want to change it.
+- `scopes` are a way of tagging tools, which is helpful when you want to run the MCP server for a specific set of tools.
 
 With Speakeasy, when starting the MCP server, you can specify which scopes to include with the `--scope` flag:
 
@@ -370,7 +370,7 @@ actions:
 
 The code above instructs Speakeasy to generate tools for operations with the tag **products** and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
 
-## Choosing Between FastMCP and Speakeasy
+## Choosing between FastMCP and Speakeasy
 
 You have two solid options for building an MCP server: FastMCP and Speakeasy. Both can help you ship quickly, but they serve different needs depending on how much control, visibility, and long-term structure you require.
 
@@ -382,9 +382,9 @@ By comparison, you don't see how tools are constructed when using FastMCP. FastM
 
 ### Setup
 
-Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with an MCP server built in, ready to integrate with Claude Desktop, Cursor AI, or run as a standalone service.
+Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with an MCP server built in, ready to integrate with Claude, Cursor, or run as a standalone service.
 
-An advantage of using FastMCP with FastAPI is that you can get a working MCP server quickly. FastMCP reuses your existing FastAPI app and requires minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
+An advantage of using FastMCP with FastAPI is that you can quickly get a working MCP server. FastMCP reuses your existing FastAPI app and only needs minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
 
 ### Customization
 
@@ -400,13 +400,13 @@ With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends
 
 ### Distribution
 
-With Speakeasy, you can publish the MCP server as an NPM package or use it directly with `npx`. This allows you to distribute tools across environments or share access with other teams and your users.
+With Speakeasy, you can publish the MCP server as an npm package or use it directly with `npx`. This allows you to distribute tools across environments or share access with other teams and your users.
 
-You typically run FastMCP locally inside Claude Desktop. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
+You typically run FastMCP locally inside the Claude desktop app. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
 
-## Final Thoughts
+## Final thoughts
 
-In this post, we have explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
+In this post, we've explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
 
-- Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server long-term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or need something running quickly.
+- Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or want something running quickly.
 - Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
